# disco

./: CMakeLists.txt  ENGINEERING_SPEC.md  README.md  pyproject.toml
.codex/: AGENTS.md
src/disco/: __init__.py  _core.cpp  _core.py  _core.pyi  cluster.py  config.py  core.hpp  envelopes.py  node_controller.py  router.py  worker.py
src/disco/event_queue/: EventQueue.cpp  EventQueue.h  PredecessorEventQueue.cpp  _core.cpp  _core.pyi
src/disco/graph/: __init__.py  core.py  db.py  extract.py  graph_mask.py  schema.py
src/disco/metastore/: __init__.py  helpers.py  store.py  structure.py
src/disco/transports/: __init__.py  base.py  grpc_ingress.py  grpc_transport.py  inprocess.py  ipc_egress.py  ipc_messages.py  ipc_receiver.py
src/disco/transports/proto/: __init__.py  transport.proto  transport_pb2.py  transport_pb2.pyi  transport_pb2_grpc.py
tests/: test_cluster.py  test_event_queue.py  test_grpc_transport.py  test_ipc_transport.py  test_routing.py  test_smoke.py
tests/graph/: test_graph_db_roundtrip.py
tests/metastore/: test_connection_manager.py  test_metastore.py
